--- a/src/Game.css
+++ b/src/Game.css
@@ -1,5 +1,16 @@
+:root{
+    --background-color: cornflowerblue;
+    --panel-background-color:lightgoldenrodyellow;
+    --panel-border-color:burlywood;
+    --board-background-color:bisque;
+    --board-border-color:burlywood;
+    --player-no-player:white;
+    --player-player1:red;
+    --player-player2:blue;
+}
+
 body{
-    background-color: cornflowerblue;
+    background-color: var(--background-color);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -14,8 +25,8 @@ body{
 
 .panel{
     position: absolute;
-    background-color: lightgoldenrodyellow;
-    border: 8px solid burlywood;
+    background-color: var(--panel-background-color) ;
+    border: 8px solid var(--panel-border-color);
     -webkit-box-shadow:7px 5px 15px 3px rgba(0,0,0,0.9);
     box-shadow:7px 5px 15px 3px rgba(0,0,0,0.9);
     z-index: 1;
@@ -82,8 +93,8 @@ body{
     left: 50%;
     margin-left:-250px;
     top:20%;
-    background-color: bisque;
-    border: 8px solid burlywood;
+    background-color: var(--board-background-color);
+    border: 8px solid var(--board-border-color);
     border-radius: 8%;
     -webkit-box-shadow:7px 5px 15px 3px rgba(0,0,0,0.9);
     box-shadow:7px 5px 15px 3px rgba(0,0,0,0.9);
@@ -98,13 +109,13 @@ body{
 }
 
 .player_0{
-    background-color: white;
+    background-color: var(--player-no-player);
 }
 
 .player_1{
-    background-color: red;
+    background-color: var(--player-player1);
 }
 
 .player_2{
-    background-color: blue;
+    background-color: var(--player-player2);
 }
