--- a/src/Game.css
+++ b/src/Game.css
@@ -12,6 +12,9 @@
 body{
     background-color: var(--background-color);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .app-container{
@@ -38,7 +41,7 @@ body{
     top: 60px;
     height: 80px;
     width: 300px;
-    margin-left: -140px;
+    margin-left: -145px;
 }
 
 .header-text{
@@ -55,19 +58,22 @@ body{
 
 .footer {
     left: 50%;
-    top: 665px;
+    top: 660px;
     height: 80px;
     width: 300px;
     margin-left: -140px;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .footer button{
-    width: 140px;
+    width: 150px;
     height: 50px;
-    margin-left: 5px;
-    margin-top: 15px;
+    /* margin-left: px; */
+    /* margin-top: 15px; */
     background-color: lightblue;
     font-size: 20px;
     -webkit-box-shadow:7px 5px 15px 3px rgba(0,0,0,0.9);
